--- a/src/posts/test-logs/2025-08-31.md
+++ b/src/posts/test-logs/2025-08-31.md
@@ -1,12 +1,12 @@
 ---
-title: "Testing log entries in 11ty"
+title: Testing log entries in 11ty
 date: 2025-08-31
-tags: ["logs"]
-status: "prototyping"
-parent: "test"
-layout: null
+tags:
+  - logs
+status: prototyping
+parent: test
+layout:
 permalink: false
-debugMarker: "TEST_FROM_LOG_ENTRY"
 ---
 
 Start adding log entry content here
